# kb-arena

./: .dockerignore  .env.example  .gitignore  BUILD_PROMPT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  PLAN.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
cypher/: schema_default.cypher  schema_kubernetes.cypher  schema_python.cypher  schema_sec.cypher
datasets/aws-compute/processed/: pageindex_tree.json
datasets/aws-compute/questions/: expected_chunks.yaml  tier1_factoid.yaml  tier2_procedural.yaml  tier3_comparative.yaml  tier4_relational.yaml  tier5_multihop.yaml
datasets/aws-compute/raw/: api-gateway.md  ecs-fargate.md  lambda-overview.md
datasets/aws-networking/questions/: tier1_factoid.yaml  tier2_procedural.yaml  tier3_comparative.yaml  tier4_relational.yaml  tier5_multihop.yaml
datasets/aws-storage/questions/: tier1_factoid.yaml  tier2_procedural.yaml  tier3_comparative.yaml  tier4_relational.yaml  tier5_multihop.yaml
datasets/azure-functions/raw/: azure-functions-overview.md
datasets/databricks-mlops/raw/: databricks-mlops-overview.md
datasets/gcp-cloud-functions/raw/: cloud-functions-overview.md
datasets/kubernetes/questions/: tier1_factoid.yaml  tier2_multi_entity.yaml  tier3_comparative.yaml  tier4_relational.yaml  tier5_temporal.yaml
datasets/python-stdlib/questions/: tier1_factoid.yaml  tier2_multi_entity.yaml  tier3_comparative.yaml  tier4_relational.yaml  tier5_temporal.yaml
datasets/sec-edgar/questions/: tier1_factoid.yaml  tier2_multi_entity.yaml  tier3_comparative.yaml  tier4_relational.yaml  tier5_temporal.yaml
docs/: retriever-lab-demo-validation.md  retriever-lab-demo.tape  retriever-lab.md
kb_arena/: __init__.py  cli.py  exceptions.py  settings.py
kb_arena/arena/: engine.py
kb_arena/audit/: __init__.py  analyzer.py  display.py  fixer.py
kb_arena/benchmark/: evaluator.py  expected_chunks.py  ir_metrics.py  question_gen.py  questions.py  ragas_metrics.py  reporter.py  retriever_lab.py  runner.py
kb_arena/chatbot/: api.py  router.py  session.py  tools_api.py
kb_arena/data/: aws-compute_pageindex.json  aws-compute_qna_pairs.json
kb_arena/generate/: __init__.py  cli_runner.py  qna.py
kb_arena/graph/: analyzer.py  cypher_generator.py  cypher_templates.py  extractor.py  neo4j_store.py  resolver.py  schema.py
kb_arena/ingest/: pipeline.py
kb_arena/ingest/parsers/: __init__.py  base.py  csv_parser.py  docx.py  github.py  html.py  markdown.py  pdf.py  plaintext.py  sec_edgar.py  (+2 more)
kb_arena/llm/: client.py  providers.py
kb_arena/models/: api.py  benchmark.py  document.py  graph.py
kb_arena/static/: 404.html  index.html  index.txt
kb_arena/strategies/: __init__.py  base.py  bm25.py  contextual_vector.py  embeddings.py  hybrid.py  knowledge_graph.py  naive_vector.py  pageindex.py  qna_pairs.py  raptor.py
results/: aws-compute_bm25.json  aws-compute_contextual_vector.json  aws-compute_hybrid.json  aws-compute_knowledge_graph.json  aws-compute_naive_vector.json  aws-compute_qna_pairs.json  aws-compute_raptor.json
results/run_855aac4e/: retriever_lab.json  retriever_lab.md
results/run_9beeb4aa/: retriever_lab.json  retriever_lab.md
tests/: conftest.py  test_arena.py  test_audit.py  test_benchmark.py  test_bm25.py  test_export.py  test_fixer.py  test_generate_qa.py  test_ingest.py  test_integration_audit.py  test_ir_metrics.py  test_label_chunks_cli.py  test_llm_client.py  test_new_parsers.py  test_parser_edge_cases.py  test_providers.py  test_retrieval_trace.py  test_retriever_lab_runner.py  test_router.py  test_settings.py  test_strategies.py  test_tokenizer.py  test_tools_api.py  test_v040_features.py
tests/api/: conftest.py  test_chat_endpoints.py
tests/integration/: test_benchmark_e2e.py  test_chatbot_api.py  test_ingest_to_graph.py  test_ingest_to_vector.py
tests/live/: conftest.py  test_embedding_flow.py  test_evaluator.py  test_intent_router.py  test_llm_client.py  test_multi_turn_chat.py  test_strategies_live.py  test_v030_features.py
tests/test_graph/: test_cypher.py  test_extractor.py  test_resolver.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: BenchmarkTable.tsx  ChatPanel.tsx  GraphViewer.tsx  Nav.tsx  StrategyCompare.tsx  ThemeToggle.tsx  TierChart.tsx
web/lib/: api.ts
(+42 files in other folders)
